--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ clap = { version = "4.5.31", features = ["derive"] }
 pulldown-cmark = "0.13.0"
 thiserror = "2.0.12"
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
-tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
+tower-http = { version = "0.6.2", features = ["fs", "timeout", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
