--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+askama = "0.12.1"
 axum = { version = "0.8.1", features = ["macros"] }
 axum-macros = "0.5.0"
 clap = { version = "4.5.31", features = ["derive"] }
